Android alignment fix

--- a/iOS/www/css/common.css
+++ b/iOS/www/css/common.css
@@ -30,7 +30,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Open Sans", "Arial";
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Arial";
 }
 
 body > .ad {
